[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Enemy/Basic_Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Enemies/Basic_enemy_lv1_dog.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Debuffs/Flame_Debuff.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Debuffs/Soaked_Debuff.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Debuffs/Brittle_Debuff.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Debuffs/Irradiated_Debuff.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Debuffs/Melting_Debuff.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Debuffs/Poisoned_Debuff.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Debuffs/Frozen_Debuff.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Debuffs/Dark_Debuff.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Debuffs/Light_Debuff.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "level_1_dog",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 21.2829
height = 2.28119

[sub_resource type="CircleShape2D" id=3]
radius = 110.0

[sub_resource type="CircleShape2D" id=4]
radius = 110.0

[node name="BasicEnemy" type="PathFollow2D"]
loop = false
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "level_1_dog"
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timers" type="Node" parent="."]

[node name="burnTimer" type="Timer" parent="Timers"]

[node name="soakTimer" type="Timer" parent="Timers"]

[node name="brittleTimer" type="Timer" parent="Timers"]

[node name="poisonTimer" type="Timer" parent="Timers"]

[node name="frozenTimer" type="Timer" parent="Timers"]

[node name="disorientedTimer" type="Timer" parent="Timers"]

[node name="checkDisorientationTimer" type="Timer" parent="Timers"]

[node name="meltTimer" type="Timer" parent="Timers"]

[node name="deepFreezeTimer" type="Timer" parent="Timers"]

[node name="BurningSprite" type="Sprite" parent="."]
position = Vector2( -18.3326, 21.8918 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="SoakedSprite" type="Sprite" parent="."]
position = Vector2( 2.30572, 8.16538 )
scale = Vector2( 0.540598, 0.540598 )
texture = ExtResource( 4 )

[node name="BrittleSprite" type="Sprite" parent="."]
position = Vector2( -5.06627, 22.0778 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="PoisonSprite" type="Sprite" parent="."]
position = Vector2( 0.351072, 21.8911 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="FrozenSprite" type="Sprite" parent="."]
position = Vector2( 5.64274, 22.4727 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )

[node name="MeltingSprite" type="Sprite" parent="."]
position = Vector2( 12.9124, 21.9455 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )

[node name="IrradiatedSprite" type="Sprite" parent="."]
position = Vector2( 20.0589, 21.5603 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )

[node name="LightSprite" type="Sprite" parent="."]
position = Vector2( -9.55106, 15.9423 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 11 )

[node name="DarkSprite" type="Sprite" parent="."]
position = Vector2( 8.97398, 16.3137 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 10 )

[node name="LightningArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightningArea"]
shape = SubResource( 3 )

[node name="RadiationArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RadiationArea"]
shape = SubResource( 4 )

[connection signal="timeout" from="Timers/burnTimer" to="." method="burn_me_daddy"]
[connection signal="timeout" from="Timers/soakTimer" to="." method="soak_me_daddy"]
[connection signal="timeout" from="Timers/brittleTimer" to="." method="embrittle_me_daddy"]
[connection signal="timeout" from="Timers/poisonTimer" to="." method="poison_me_daddy"]
[connection signal="timeout" from="Timers/frozenTimer" to="." method="freeze_me_daddy"]
[connection signal="timeout" from="Timers/disorientedTimer" to="." method="disorient_me_daddy"]
[connection signal="timeout" from="Timers/checkDisorientationTimer" to="." method="_on_checkDisorientationTimer_timeout"]
[connection signal="timeout" from="Timers/meltTimer" to="." method="melt_me_daddy"]
[connection signal="timeout" from="Timers/deepFreezeTimer" to="." method="deep_freeze_me_daddy"]
[connection signal="area_entered" from="LightningArea" to="." method="_on_LightningArea_area_entered"]
[connection signal="area_exited" from="LightningArea" to="." method="_on_LightningArea_area_exited"]
[connection signal="area_entered" from="RadiationArea" to="." method="_on_RadiationArea_area_entered"]
[connection signal="area_exited" from="RadiationArea" to="." method="_on_RadiationArea_area_exited"]
